// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Door container Should render door correctly with content prop and open 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "background": "#d4d4d4",
      "border": "1px solid #00f",
      "display": "flex",
      "height": "200px",
      "justifyContent": "center",
      "width": "125px",
    }
  }
>
  content
</div>
`;

exports[`Door container Should render door correctly with default props 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "background": "#999",
      "border": "",
      "display": "flex",
      "height": "200px",
      "justifyContent": "center",
      "width": "125px",
    }
  }
/>
`;

exports[`Door container Should render door correctly with open prop 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "background": "#d4d4d4",
      "border": "1px solid #00f",
      "display": "flex",
      "height": "200px",
      "justifyContent": "center",
      "width": "125px",
    }
  }
/>
`;

exports[`Door container Should render door correctly with selected prop 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "background": "#d4d4d4",
      "border": "4px solid #0f0",
      "display": "flex",
      "height": "200px",
      "justifyContent": "center",
      "width": "125px",
    }
  }
/>
`;
